Some changes on screen layout
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1410 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/EmptyScreenView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/EmptyScreenView.mxml
@@ -21,7 +21,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="onShow()">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="onShow()" show="onShow()">
 	
     <mx:Metadata>
         [Name]
@@ -55,7 +55,7 @@
              */
             public var loginView:LoginView;
         
-            [Observer("APP_LOCK","APP_LOGOUT")]
+            [Observer("APP_LOCK")]
             /**
              * Whats going on? On logout or lock event we show this dialogue.
              */
