--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
@@ -21,7 +21,7 @@
      * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
      */
 -->
-<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="242" title="Change User Password" fontSize="12" creationComplete="init();">
+<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="242" title="Change User Password" fontSize="12" show="onShow();" creationComplete="onShow();">
 
     <mx:Metadata>
         [Name]
@@ -40,9 +40,10 @@
             [Bindable]
             public var modelLocator : ModelLocator;
     		
-    		private function init():void {
+    		private function onShow():void {
                 newPasswordTxt.setFocus();
                 this.addEventListener(KeyboardEvent.KEY_DOWN, keyEventHandler);
+                newPasswordTxt.setFocus();
                 PopUpManager.centerPopUp(this);
             }
             
