--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
@@ -63,7 +63,7 @@
             public var loginMessageText:String = "";
             
             private function onShow():void {
-                identity.logout();
+                //identity.logout();
             	myUser.setFocus();
                 PopUpManager.centerPopUp(this);
             }
