--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
@@ -21,7 +21,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:comp="org.openwms.web.flex.client.component.*" width="100%" height="100%" show="onStartup()" backgroundColor="#C2DAEF">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:comp="org.openwms.web.flex.client.component.*" width="100%" height="100%" show="onShow()" backgroundColor="#C2DAEF">
 
     <mx:Metadata>
         [Name("transportUnitView")]
@@ -33,15 +33,19 @@
 
 	<mx:Script>
     	<![CDATA[
+    		import flash.events.MouseEvent;
     		import mx.controls.dataGridClasses.DataGridColumn;
-    		import org.openwms.common.domain.values.TransportUnitState;
     		import mx.messaging.channels.StreamingAMFChannel;
     		import mx.events.ListEvent;
-    		import flash.events.MouseEvent;
     		import mx.collections.ArrayCollection;
     		import mx.controls.Alert;
+			import mx.managers.PopUpManager;
+    		
+			import org.granite.tide.spring.Identity;
+            
             import org.openwms.common.domain.TransportUnit;
-            import org.openwms.web.flex.client.common.event.TransportUnitEvent;
+            import org.openwms.common.domain.values.TransportUnitState;
+    		import org.openwms.web.flex.client.common.event.TransportUnitEvent;
             import org.openwms.web.flex.client.common.event.LocationEvent;
             import org.openwms.web.flex.client.common.event.TransportUnitTypeEvent;
     		import org.openwms.web.flex.client.common.model.IconLocator;
@@ -49,7 +53,6 @@
     		import org.openwms.web.flex.client.common.view.dialogs.CreateTransportUnitDialog;
     		import org.openwms.web.flex.client.common.view.dialogs.ConfirmDeletionDialog;
             import org.openwms.web.flex.client.common.view.dialogs.TransportUnitDetailsDialog;
-    		import mx.managers.PopUpManager;
     		
 		    [Inject]
 		    [Bindable]
@@ -57,13 +60,19 @@
 		     * Injected Model.
 		     */
             public var commonModelLocator:CommonModelLocator;
+            [Inject]
+            [Bindable]
+            /**
+             * We need to have Granites Identity injected.
+             */
+            public var identity:Identity;
             
             [Bindable]
             private var selected:TransportUnit;
             
             private var tu:TransportUnit = new TransportUnit();
             
-    		public function onStartup():void {
+    		private function onShow():void {
     			if (commonModelLocator.allTransportUnits.length == 0) {
                     dispatchEvent(new TransportUnitEvent(TransportUnitEvent.LOAD_TRANSPORT_UNITS));
                 }
@@ -140,68 +149,73 @@
 	<mx:HBox x="10" y="10" verticalAlign="middle" width="95%" backgroundColor="#F9FBB7">
 	    <mx:Label x="10" y="10" text="Transport Units" fontSize="24"/>
 	    <mx:VRule height="10"/>
-	    <mx:Button id="addTransportUnitBtn" buttonMode="true" mouseChildren="false" toolTip="Create a new Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Add.png')" click="showCreateTransportUnitDialog()"/>
+	    <mx:Button id="addTransportUnitBtn" enabled="{identity.ifAllGranted('COMMON_add_tu_button')}" buttonMode="true" mouseChildren="false" toolTip="Create a new Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Add.png')" click="showCreateTransportUnitDialog()"/>
 	    <mx:VRule height="10"/>
-	    <mx:Button id="deleteTransportUnitBtn" buttonMode="true" mouseChildren="false" toolTip="Delete an existing Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Delete.png')" click="deleteTransportUnitDialog()" />
+	    <mx:Button id="deleteTransportUnitBtn" enabled="{identity.ifAllGranted('COMMON_delete_tu_button')}" buttonMode="true" mouseChildren="false" toolTip="Delete an existing Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Delete.png')" click="deleteTransportUnitDialog()" />
         <mx:VRule height="10"/>
-        <mx:Button id="saveTransportUnitBtn" buttonMode="true" mouseChildren="false" toolTip="Save an existing Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Save.png')" click="save()" />
+        <mx:Button id="saveTransportUnitBtn" enabled="{identity.ifAllGranted('COMMON_save_tu_button')}" buttonMode="true" mouseChildren="false" toolTip="Save an existing Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Save.png')" click="save()" />
         <mx:VRule height="10"/>
         <mx:Button id="refreshTransportUnitsBtn" buttonMode="true" mouseChildren="false" toolTip="Refresh the list of Transport Units" icon="@Embed(source='assets/images/icons/refresh.png')" click="refresh()"/>
         <mx:VRule height="10"/>
         <mx:Button id="showTransportUnitDetailsBtn" buttonMode="true" mouseChildren="false" toolTip="Show details of an existing Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Edit.png')" click="showDetails()" />
         <mx:VRule height="10"/>
-	    <mx:Button id="showTransportUnitHistoryBtn" buttonMode="true" mouseChildren="false" toolTip="Show history information about an Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--History.png')" click="deleteTransportUnitDialog()" />
+	    <mx:Button id="showTransportUnitHistoryBtn" enabled="{identity.ifAllGranted('COMMON_show_tu_history_button')}" buttonMode="true" mouseChildren="false" toolTip="Show history information about an Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--History.png')" click="deleteTransportUnitDialog()" />
 	</mx:HBox>
     <mx:HRule x="10" y="53" width="95%"/>
 
 	<mx:HBox x="10" y="63" width="95%" height="100%">
-		<mx:DataGrid id="transportUnitsGrid" width="100%" height="95%" doubleClickEnabled="true" doubleClick="showDetails()" change="onRowClick(event)" allowMultipleSelection="true" dataProvider="{commonModelLocator.allTransportUnits}" x="0" y="10">
+		<mx:Canvas height="95%" backgroundColor="#F9FBB7" backgroundAlpha="1.0">
+			
+			<mx:Label text="Transport Unit" fontWeight="bold" textAlign="left" x="34" y="10"/>
+			<mx:Label text="Transport Unit Type" fontWeight="bold" textAlign="left" x="34" y="396"/>
+		       <mx:Text text="{selected.barcode}" fontWeight="bold"  x="148" y="36"/>
+		       <mx:Text text="{selected.transportUnitType.type}" fontWeight="bold"  x="148" y="420"/>
+			
+			<mx:Label text="State" fontWeight="normal" width="130" textAlign="left" x="10" y="62"/>
+			<mx:Label text="Barcode" fontWeight="normal" width="130" textAlign="left" x="10" y="36"/>
+			<mx:Label text="Type" fontWeight="normal" width="130" textAlign="left" x="10" y="420"/>
+		       <comp:SuggestComboBox id="stateCmb" x="148" y="60" dataProvider="{TransportUnitState.constants}" />
+			
+			<mx:Label text="Current Location" fontWeight="normal" width="130" textAlign="left" x="10" y="90"/>
+			<comp:SuggestComboBox x="148" y="88" id="actualLocationCmb" dataProvider="{commonModelLocator.allLocations}"/>
+			
+			<mx:Label text="Moved at" fontWeight="normal" width="130" textAlign="left" x="10" y="116"/>
+		       <mx:Text text="{dateFormatter.format(selected.actualLocationDate)}" fontWeight="normal"  x="148" y="116"/>
+		       
+		       <mx:Label text="Last Inventory at" fontWeight="normal" width="130" textAlign="left" x="10" y="142"/>
+		       <mx:Text text="{(selected.inventoryDate == null) ? '--' : dateFormatter.format(selected.inventoryDate)}" fontWeight="normal"  x="148" y="142"/>
+		       
+		       <mx:Label text="Last Inventory by" fontWeight="normal" width="130" textAlign="left" x="10" y="168"/>
+		       <mx:Text text="{(selected.inventoryUser == null) ? '--' : selected.inventoryUser.username}" fontWeight="normal"  x="148" y="168"/>
+			
+			<mx:Label text="Created at" fontWeight="normal" width="130" textAlign="left" x="10" y="220"/>
+		       <mx:Text text="{dateFormatter.format(selected.creationDate)}" fontWeight="normal"  x="148" y="220"/>
+		       
+		       <mx:CheckBox id="emptyChk" x="148" y="261" label="Empty" selected="{selected.isEmpty()}"/>
+		       
+		       <mx:Label x="10" y="291" text="Weight" width="130" textAlign="left"/>
+		       <mx:Label id="weightLbl" x="148" y="291" text="{selected.weight}"/>
+			
+			<mx:Label text="Errors" fontWeight="normal" width="130" textAlign="left" x="10" y="317"/>
+		       <mx:List x="148" y="314" width="140" height="64" />
+			
+			<mx:Label text="Placed On" fontWeight="normal" width="130" textAlign="left" x="10" y="194"/>
+			<mx:Text text="{(selected.parent == null) ? '--' : selected.parent.barcode}" fontWeight="normal"  x="148" y="194"/>
+			
+			<mx:HRule x="10" y="386" width="309"/>
+			<mx:Image x="293" y="314" height="16" width="16" mouseChildren="false" source="@Embed(source='assets/images/icons/minus.png')"/>
+			<mx:Image x="10" y="10" source="@Embed(source='/assets/images/TransportUnit.png')"/>
+			<mx:Image x="10" y="396" source="@Embed(source='/assets/images/TransportUnitType.png')"/>
+		</mx:Canvas>
+		<mx:DataGrid id="transportUnitsGrid" height="95%" doubleClickEnabled="true" doubleClick="showDetails()" change="onRowClick(event)" allowMultipleSelection="true" dataProvider="{commonModelLocator.allTransportUnits}" width="100%">
 			<mx:columns>
 				<mx:DataGridColumn width="130" headerText="Barcode" dataField="barcode" />
-                <mx:DataGridColumn width="80" headerText="Type" dataField="transportUnitType" />
-                <mx:DataGridColumn width="100" headerText="State" dataField="state" />
+			          <mx:DataGridColumn width="80" headerText="Type" dataField="transportUnitType" />
+			          <mx:DataGridColumn width="100" headerText="State" dataField="state" />
 				<mx:DataGridColumn width="160" headerText="Current Location" dataField="actualLocation" />
-                <mx:DataGridColumn width="130" headerText="Placed on" dataField="parent" labelFunction="formatBarcode" />
-                <mx:DataGridColumn width="150" headerText="Created" dataField="creationDate" labelFunction="formatDateField"/>
+			          <mx:DataGridColumn width="130" headerText="Placed on" dataField="parent" labelFunction="formatBarcode" />
+			          <mx:DataGridColumn width="150" headerText="Created" dataField="creationDate" labelFunction="formatDateField"/>
 			</mx:columns>
 		</mx:DataGrid>
-		<mx:Canvas width="329" height="95%" backgroundColor="#F9FBB7" backgroundAlpha="1.0">
-
-			<mx:Label text="Transport Unit" fontWeight="bold" width="130" textAlign="right" x="10" y="10"/>
-            <mx:Text text="{selected.barcode}" width="100%" fontWeight="bold"  x="148" y="10"/>
-
-			<mx:Label text="State" fontWeight="normal" width="130" textAlign="right" x="10" y="36"/>
-            <comp:SuggestComboBox id="stateCmb" x="148" y="34" dataProvider="{TransportUnitState.constants}" />
-
-			<mx:Label text="Current Location" fontWeight="normal" width="130" textAlign="right" x="10" y="62"/>
-			<comp:SuggestComboBox x="148" y="60" id="actualLocationCmb" dataProvider="{commonModelLocator.allLocations}"/>
-
-			<mx:Label text="Moved" fontWeight="normal" width="130" textAlign="right" x="10" y="110"/>
-            <mx:Text text="{dateFormatter.format(selected.actualLocationDate)}" width="100%" fontWeight="normal"  x="148" y="110"/>
-
-            <mx:Label text="Last Inventory at" fontWeight="normal" width="130" textAlign="right" x="10" y="136"/>
-            <mx:Text text="{(selected.inventoryDate == null) ? '--' : dateFormatter.format(selected.inventoryDate)}" width="100%" fontWeight="normal"  x="148" y="136"/>
-
-            <mx:Label text="Last Inventory by" fontWeight="normal" width="130" textAlign="right" x="10" y="162"/>
-            <mx:Text text="{(selected.inventoryUser == null) ? '--' : selected.inventoryUser.username}" width="100%" fontWeight="normal"  x="148" y="162"/>
-
-			<mx:Label text="Created at" fontWeight="normal" width="130" textAlign="right" x="10" y="214"/>
-            <mx:Text text="{dateFormatter.format(selected.creationDate)}" width="100%" fontWeight="normal"  x="148" y="214"/>
-
-            <mx:CheckBox id="emptyChk" x="148" y="255" label="Empty" selected="{selected.isEmpty()}"/>
-
-            <mx:Label x="10" y="285" text="Weight" width="130" textAlign="right"/>
-            <mx:Label id="weightLbl" x="148" y="285" width="100%" text="{selected.weight}"/>
-
-			<mx:Label text="Errors" fontWeight="normal" width="130" textAlign="right" x="10" y="321"/>
-            <mx:List x="148" y="320" width="140" height="64" />
-
-			<mx:Label text="Placed On" fontWeight="normal" width="130" textAlign="right" x="10" y="188"/>
-			<mx:Text text="{(selected.parent == null) ? '--' : selected.parent.barcode}" width="100%" fontWeight="normal"  x="148" y="188"/>
-
-			<mx:HRule x="10" y="100" width="309"/>
-			<mx:HRule x="10" y="311" width="309"/>
-			<mx:Image x="292" y="320" height="16" width="16" mouseChildren="false" source="@Embed(source='assets/images/icons/minus.png')"/>
-		</mx:Canvas>
 	</mx:HBox>
 </mx:Canvas>
